--- a/results.ipynb
+++ b/results.ipynb
@@ -12,12 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Module 1: RecordLinkage "
+    "## Module 1: RecordLinkage Using Features Weighted Average\n",
+    "Author: Sixuan Li"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,13 +169,179 @@
        "[10036 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "record_linkage_pipeline(left_df, right_df, filename='./data/recordlinkage_submission.csv', threshold=0.85)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module 2: RecordLinkage Using Features Mean\n",
+    "Author: Sixuan Li"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "left_df = pd.read_csv('./data/left_dataset.csv')\n",
+    "right_df = pd.read_csv('./data/right_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.module2_recordlinkage import record_linkage_pipeline_full_address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>left_dataset</th>\n",
+       "      <th>right_dataset</th>\n",
+       "      <th>confidence_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <th>75686</th>\n",
+       "      <td>2</td>\n",
+       "      <td>75687</td>\n",
+       "      <td>0.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">7</th>\n",
+       "      <th>81911</th>\n",
+       "      <td>8</td>\n",
+       "      <td>81912</td>\n",
+       "      <td>0.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84020</th>\n",
+       "      <td>8</td>\n",
+       "      <td>84021</td>\n",
+       "      <td>0.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <th>51941</th>\n",
+       "      <td>15</td>\n",
+       "      <td>51942</td>\n",
+       "      <td>0.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <th>87105</th>\n",
+       "      <td>20</td>\n",
+       "      <td>87106</td>\n",
+       "      <td>0.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94559</th>\n",
+       "      <th>74490</th>\n",
+       "      <td>94560</td>\n",
+       "      <td>74491</td>\n",
+       "      <td>0.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">94570</th>\n",
+       "      <th>72779</th>\n",
+       "      <td>94571</td>\n",
+       "      <td>72780</td>\n",
+       "      <td>0.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75425</th>\n",
+       "      <td>94571</td>\n",
+       "      <td>75426</td>\n",
+       "      <td>0.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94578</th>\n",
+       "      <th>80356</th>\n",
+       "      <td>94579</td>\n",
+       "      <td>80357</td>\n",
+       "      <td>0.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94582</th>\n",
+       "      <th>85068</th>\n",
+       "      <td>94583</td>\n",
+       "      <td>85069</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>33981 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             left_dataset  right_dataset  confidence_score\n",
+       "1     75686             2          75687              0.81\n",
+       "7     81911             8          81912              0.83\n",
+       "      84020             8          84021              0.90\n",
+       "14    51941            15          51942              0.81\n",
+       "19    87105            20          87106              0.81\n",
+       "...                   ...            ...               ...\n",
+       "94559 74490         94560          74491              0.82\n",
+       "94570 72779         94571          72780              0.81\n",
+       "      75425         94571          75426              0.83\n",
+       "94578 80356         94579          80357              0.97\n",
+       "94582 85068         94583          85069              0.80\n",
+       "\n",
+       "[33981 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "record_linkage_pipeline_full_address(left_df, right_df, filename='./data/recordlinkage2_submission.csv')"
    ]
   }
  ],
