--- a/results.ipynb
+++ b/results.ipynb
@@ -192,6 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "left_df = pd.read_csv('./data/left_dataset.csv')\n",
     "right_df = pd.read_csv('./data/right_dataset.csv')"
    ]
@@ -342,6 +343,185 @@
    ],
    "source": [
     "record_linkage_pipeline_full_address(left_df, right_df, filename='./data/recordlinkage2_submission.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module 3: TheFuzz Using Features Mean\n",
+    "Author: Xueni Wang"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "left_df = pd.read_csv('./data/left_dataset.csv')\n",
+    "right_df = pd.read_csv('./data/right_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.module3_thefuzz import thefuzz_pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sixuanli/Desktop/Columbia/SPRING2024/APANPS5210_004/entity-resolution-group2/src/module3_thefuzz.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  left_df['address'].fillna('', inplace=True)\n",
+      "/Users/sixuanli/Desktop/Columbia/SPRING2024/APANPS5210_004/entity-resolution-group2/src/module3_thefuzz.py:10: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  left_df['postal_code'].fillna('00000', inplace=True)\n",
+      "/Users/sixuanli/Desktop/Columbia/SPRING2024/APANPS5210_004/entity-resolution-group2/src/module3_thefuzz.py:10: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '00000' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  left_df['postal_code'].fillna('00000', inplace=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>left_dataset</th>\n",
+       "      <th>right_dataset</th>\n",
+       "      <th>confidence_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60</td>\n",
+       "      <td>39237</td>\n",
+       "      <td>0.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>534</td>\n",
+       "      <td>42420</td>\n",
+       "      <td>0.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1337</td>\n",
+       "      <td>39545</td>\n",
+       "      <td>0.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2651</td>\n",
+       "      <td>49857</td>\n",
+       "      <td>0.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3214</td>\n",
+       "      <td>49285</td>\n",
+       "      <td>0.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14927</th>\n",
+       "      <td>58215</td>\n",
+       "      <td>88924</td>\n",
+       "      <td>0.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14928</th>\n",
+       "      <td>16504</td>\n",
+       "      <td>84508</td>\n",
+       "      <td>0.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14929</th>\n",
+       "      <td>38004</td>\n",
+       "      <td>84508</td>\n",
+       "      <td>0.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14930</th>\n",
+       "      <td>72169</td>\n",
+       "      <td>91487</td>\n",
+       "      <td>0.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14931</th>\n",
+       "      <td>67308</td>\n",
+       "      <td>76410</td>\n",
+       "      <td>0.83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14932 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       left_dataset  right_dataset  confidence_score\n",
+       "0                60          39237              0.81\n",
+       "1               534          42420              0.89\n",
+       "2              1337          39545              0.83\n",
+       "3              2651          49857              0.86\n",
+       "4              3214          49285              0.91\n",
+       "...             ...            ...               ...\n",
+       "14927         58215          88924              0.85\n",
+       "14928         16504          84508              0.84\n",
+       "14929         38004          84508              0.91\n",
+       "14930         72169          91487              0.89\n",
+       "14931         67308          76410              0.83\n",
+       "\n",
+       "[14932 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thefuzz_pipeline(left_df, right_df, output_csv = \"./data/thefuzz_submission.csv\")"
    ]
   }
  ],
