--- a/explorations/thefuzz.ipynb
+++ b/explorations/thefuzz.ipynb
@@ -16,19 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting thefuzz\n",
-      "  Downloading thefuzz-0.22.1-py3-none-any.whl.metadata (3.9 kB)\n",
-      "Requirement already satisfied: rapidfuzz<4.0.0,>=3.0.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from thefuzz) (3.8.1)\n",
-      "Downloading thefuzz-0.22.1-py3-none-any.whl (8.2 kB)\n",
-      "Installing collected packages: thefuzz\n",
-      "Successfully installed thefuzz-0.22.1\n"
+      "Requirement already satisfied: thefuzz in c:\\users\\sherry\\miniconda3\\envs\\myenvironment\\lib\\site-packages (0.22.1)\n",
+      "Requirement already satisfied: rapidfuzz<4.0.0,>=3.0.0 in c:\\users\\sherry\\miniconda3\\envs\\myenvironment\\lib\\site-packages (from thefuzz) (3.8.1)\n"
      ]
     }
    ],
@@ -38,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +88,7 @@
     }
    ],
    "source": [
-    "# try find null value to ensure the accuracy\n",
+    "# Try to find null value to ensure the accuracy\n",
     "print(\"Missing values in left_df:\")\n",
     "print(left_df.isnull().sum())\n",
     "\n",
@@ -109,65 +105,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Rename columns in left_df to match those in right\n",
-    "left_df.rename(columns={\n",
-    "    'postal_code': 'zip_code' \n",
-    "}, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/3s/gxf5sqwj7x57yyybnws8lkwm0000gn/T/ipykernel_23861/1646616225.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  left_df['address'].fillna('', inplace=True)\n",
-      "/var/folders/3s/gxf5sqwj7x57yyybnws8lkwm0000gn/T/ipykernel_23861/1646616225.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  left_df['zip_code'].fillna('00000', inplace=True)\n",
-      "/var/folders/3s/gxf5sqwj7x57yyybnws8lkwm0000gn/T/ipykernel_23861/1646616225.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '00000' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  left_df['zip_code'].fillna('00000', inplace=True)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "entity_id      0\n",
-       "name           0\n",
-       "address        0\n",
-       "city           0\n",
-       "state          0\n",
-       "zip_code       0\n",
-       "categories    62\n",
+       "entity_id       0\n",
+       "name            0\n",
+       "address         0\n",
+       "city            0\n",
+       "state           0\n",
+       "postal_code     0\n",
+       "categories     62\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# impute na in left_df\n",
-    "left_df['address'].fillna('', inplace=True)\n",
-    "left_df['zip_code'].fillna('00000', inplace=True)\n",
+    "# Impute na in left_df\n",
+    "left_df['address'] = left_df['address'].fillna('')\n",
+    "left_df['postal_code'] = left_df['postal_code'].astype(str).fillna('00000')\n",
     "\n",
     "# Verify that missing values have been addressed\n",
     "left_df.isnull().sum()"
@@ -175,18 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Deal with zip_code\n",
-    "left_df['zip_code'] = left_df['zip_code'].astype(str).apply(lambda x: x.split('.')[0])\n",
+    "left_df['postal_code'] = left_df['postal_code'].astype(str).apply(lambda x: x.split('.')[0])\n",
     "right_df['zip_code'] = right_df['zip_code'].astype(str).apply(lambda x: x.split('-')[0].zfill(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +196,7 @@
        "      <th>address</th>\n",
        "      <th>city</th>\n",
        "      <th>state</th>\n",
-       "      <th>zip_code</th>\n",
+       "      <th>postal_code</th>\n",
        "      <th>categories</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -356,17 +318,17 @@
        "8          9                 marshalls   \n",
        "9         10     vietnamese food truck   \n",
        "\n",
-       "                                     address           city state zip_code  \\\n",
-       "0            87 grasso plaza shopping center         affton    MO    63123   \n",
-       "1                                935 race st   philadelphia    PA    19107   \n",
-       "2                              101 walnut st     green lane    PA    18054   \n",
-       "3                              615 s main st   ashland city    TN    37015   \n",
-       "4  8522 eager road dierbergs brentwood point      brentwood    MO    63144   \n",
-       "5                         400 pasadena ave s  st petersburg    FL    33707   \n",
-       "6                          8025 mackenzie rd         affton    MO    63123   \n",
-       "7                        2312 dickerson pike      nashville    TN    37207   \n",
-       "8                  21705 village lakes sc dr   land o lakes    FL    34639   \n",
-       "9                                                 tampa bay    FL    33602   \n",
+       "                                     address           city state postal_code  \\\n",
+       "0            87 grasso plaza shopping center         affton    MO       63123   \n",
+       "1                                935 race st   philadelphia    PA       19107   \n",
+       "2                              101 walnut st     green lane    PA       18054   \n",
+       "3                              615 s main st   ashland city    TN       37015   \n",
+       "4  8522 eager road dierbergs brentwood point      brentwood    MO       63144   \n",
+       "5                         400 pasadena ave s  st petersburg    FL       33707   \n",
+       "6                          8025 mackenzie rd         affton    MO       63123   \n",
+       "7                        2312 dickerson pike      nashville    TN       37207   \n",
+       "8                  21705 village lakes sc dr   land o lakes    FL       34639   \n",
+       "9                                                 tampa bay    FL       33602   \n",
        "\n",
        "                                          categories  \n",
        "0  Shipping Centers, Local Services, Notaries, Ma...  \n",
@@ -381,7 +343,7 @@
        "9         Vietnamese, Food, Restaurants, Food Trucks  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +518,7 @@
        "9   clearwater    FL    33759  16.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +549,7 @@
    ],
    "source": [
     "# Create combined fields\n",
-    "left_df['combined'] = left_df['name'] + ' ' + left_df['address'] + ' ' + left_df['state'] + ' ' + left_df['zip_code'].astype(str)\n",
+    "left_df['combined'] = left_df['name'] + ' ' + left_df['address'] + ' ' + left_df['state'] + ' ' + left_df['postal_code'].astype(str)\n",
     "right_df['combined'] = right_df['name'] + ' ' + right_df['address'] + ' ' + right_df['state'] + ' ' + right_df['zip_code'].astype(str)\n",
     "\n",
     "# Create blocking keys\n",
@@ -619,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,12 +603,12 @@
     "matches_df = pd.DataFrame(match_data)\n",
     "\n",
     "# Write to CSV\n",
-    "matches_df.to_csv('../data/thefuzz_submission.csv.csv', index=False)"
+    "matches_df.to_csv('thefuzz_submission.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -670,8 +632,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>entity_id</th>\n",
-       "      <th>business_id</th>\n",
+       "      <th>left_dataset</th>\n",
+       "      <th>right_dataset</th>\n",
        "      <th>confidence_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -748,23 +710,23 @@
        "</div>"
       ],
       "text/plain": [
-       "       entity_id  business_id  confidence_score\n",
-       "0             60        39237              0.81\n",
-       "1            534        42420              0.89\n",
-       "2           1337        39545              0.83\n",
-       "3           2651        49857              0.86\n",
-       "4           3214        49285              0.91\n",
-       "...          ...          ...               ...\n",
-       "14927      58215        88924              0.85\n",
-       "14928      16504        84508              0.84\n",
-       "14929      38004        84508              0.91\n",
-       "14930      72169        91487              0.89\n",
-       "14931      67308        76410              0.83\n",
+       "       left_dataset  right_dataset  confidence_score\n",
+       "0                60          39237              0.81\n",
+       "1               534          42420              0.89\n",
+       "2              1337          39545              0.83\n",
+       "3              2651          49857              0.86\n",
+       "4              3214          49285              0.91\n",
+       "...             ...            ...               ...\n",
+       "14927         58215          88924              0.85\n",
+       "14928         16504          84508              0.84\n",
+       "14929         38004          84508              0.91\n",
+       "14930         72169          91487              0.89\n",
+       "14931         67308          76410              0.83\n",
        "\n",
        "[14932 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,8 +746,8 @@
     "\n",
     "def thefuzz_pipeline(left_df, right_df, output_csv):\n",
     "    # Fill missing values\n",
-    "    left_df['address'].fillna('', inplace=True)\n",
-    "    left_df['postal_code'].fillna('00000', inplace=True)\n",
+    "    left_df['address'] = left_df['address'].fillna('')\n",
+    "    left_df['postal_code'] = left_df['postal_code'].astype(str).fillna('00000')\n",
     "\n",
     "    def preprocess_data(df):\n",
     "        df['state'] = df['state'].astype(str).str.strip()\n",
@@ -798,7 +760,7 @@
     "    left_df = preprocess_data(left_df)\n",
     "    right_df = preprocess_data(right_df)\n",
     "\n",
-    "    #deal with postcode problem\n",
+    "    #deal with postercode problem\n",
     "    left_df['postal_code'] = left_df['postal_code'].astype(str).apply(lambda x: x.split('.')[0])\n",
     "    right_df['zip_code'] = right_df['zip_code'].astype(str).apply(lambda x: x.split('-')[0].zfill(5))\n",
     "\n",
@@ -847,23 +809,14 @@
     "    # Write results to CSV\n",
     "    thefuzz_submission.to_csv(output_csv, index=False)\n",
     "\n",
-    "    return thefuzz_submission\n",
-    "\n"
+    "    return thefuzz_submission"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Sherry\\AppData\\Local\\Temp\\ipykernel_22576\\600218043.py:7: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '00000' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  left_df['postal_code'].fillna('00000', inplace=True)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -885,8 +838,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>entity_id</th>\n",
-       "      <th>business_id</th>\n",
+       "      <th>left_dataset</th>\n",
+       "      <th>right_dataset</th>\n",
        "      <th>confidence_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -963,29 +916,29 @@
        "</div>"
       ],
       "text/plain": [
-       "       entity_id  business_id  confidence_score\n",
-       "0             60        39237              0.81\n",
-       "1            534        42420              0.89\n",
-       "2           1337        39545              0.83\n",
-       "3           2651        49857              0.86\n",
-       "4           3214        49285              0.91\n",
-       "...          ...          ...               ...\n",
-       "14927      58215        88924              0.85\n",
-       "14928      16504        84508              0.84\n",
-       "14929      38004        84508              0.91\n",
-       "14930      72169        91487              0.89\n",
-       "14931      67308        76410              0.83\n",
+       "       left_dataset  right_dataset  confidence_score\n",
+       "0                60          39237              0.81\n",
+       "1               534          42420              0.89\n",
+       "2              1337          39545              0.83\n",
+       "3              2651          49857              0.86\n",
+       "4              3214          49285              0.91\n",
+       "...             ...            ...               ...\n",
+       "14927         58215          88924              0.85\n",
+       "14928         16504          84508              0.84\n",
+       "14929         38004          84508              0.91\n",
+       "14930         72169          91487              0.89\n",
+       "14931         67308          76410              0.83\n",
        "\n",
        "[14932 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# function test \n",
+    "# Function test \n",
     "# thefuzz_pipeline(left_df, right_df, output_csv = \"../data/thefuzz_submission.csv\")"
    ]
   }
