add fnmatch + textdistance result

--- a/results.ipynb
+++ b/results.ipynb
@@ -501,6 +501,167 @@
    "source": [
     "thefuzz_pipeline(left_df, right_df, output_csv = \"./data/thefuzz_submission.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module 4: fnmatch + textdistance\n",
+    "Author: Margaret Ma\n",
+    "- **Data Cleaning**: Standardizes postal codes and cleans text fields to ensure uniformity, facilitating accurate comparisons.\n",
+    "- **Blocking Keys Creation**: Forms a block_key for each entry using the initial characters of the address, name, state, and postal code. This key reduces the comparison scope by grouping similar entries together.\n",
+    "- **Matching and Scoring**: Employs fnmatch to find potential name matches and uses textdistance to calculate similarity scores. Matches are confirmed and scored higher if the names are very similar, and a secondary similarity measure is used for others.\n",
+    "- **Output**: Entries with a confidence score above 0.8 are identified as high-confidence matches and saved to a CSV file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "left_df = pd.read_csv('./data/left_dataset.csv')\n",
+    "right_df = pd.read_csv('./data/right_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.module4_fnmatch_textdistance import fnmatch_textdistance_pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>left_dataset</th>\n",
+       "      <th>right_dataset</th>\n",
+       "      <th>confidence_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>8</td>\n",
+       "      <td>81912</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>8</td>\n",
+       "      <td>84021</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>950</th>\n",
+       "      <td>15</td>\n",
+       "      <td>57146</td>\n",
+       "      <td>0.885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3561</th>\n",
+       "      <td>57</td>\n",
+       "      <td>32737</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3707</th>\n",
+       "      <td>60</td>\n",
+       "      <td>39159</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6837734</th>\n",
+       "      <td>94475</td>\n",
+       "      <td>166</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6837742</th>\n",
+       "      <td>94475</td>\n",
+       "      <td>2373</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6842155</th>\n",
+       "      <td>94539</td>\n",
+       "      <td>79363</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6842431</th>\n",
+       "      <td>94546</td>\n",
+       "      <td>83310</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6844985</th>\n",
+       "      <td>94579</td>\n",
+       "      <td>80357</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8003 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        left_dataset right_dataset  confidence_score\n",
+       "251                8         81912             1.000\n",
+       "293                8         84021             1.000\n",
+       "950               15         57146             0.885\n",
+       "3561              57         32737             1.000\n",
+       "3707              60         39159             1.000\n",
+       "...              ...           ...               ...\n",
+       "6837734        94475           166             1.000\n",
+       "6837742        94475          2373             1.000\n",
+       "6842155        94539         79363             1.000\n",
+       "6842431        94546         83310             1.000\n",
+       "6844985        94579         80357             1.000\n",
+       "\n",
+       "[8003 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fnmatch_textdistance_pipeline(left_df, right_df, filename = './data/fnmatch_textdistance_submission.csv', threshold = 0.8)"
+   ]
   }
  ],
  "metadata": {
