add dedupe result

--- a/results.ipynb
+++ b/results.ipynb
@@ -662,6 +662,485 @@
    "source": [
     "fnmatch_textdistance_pipeline(left_df, right_df, filename = './data/fnmatch_textdistance_submission.csv', threshold = 0.8)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module 5: Dedupe\n",
+    "Author: Xinyi Yu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "left_df = pd.read_csv('./data/left_dataset.csv')\n",
+    "right_df = pd.read_csv('./data/right_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.module5_dedupe import dedupe_pipeline "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "name : dammanns garden company\n",
+      "address : 5129 s emerson ave\n",
+      "city : indianapolis\n",
+      "state : IN\n",
+      "postal_code : 46237\n",
+      "\n",
+      "name : dammanns garden company llc\n",
+      "address : 5129 s emerson ave\n",
+      "city : indianapolis\n",
+      "state : IN\n",
+      "postal_code : 46237\n",
+      "\n",
+      "0/10 positive, 0/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished\n",
+      "name : the ultimate bake shoppe of ardmore\n",
+      "address : 120 coulter ave\n",
+      "city : ardmore\n",
+      "state : PA\n",
+      "postal_code : 19003\n",
+      "\n",
+      "name : the ultimate bake shoppe of ardmore llc\n",
+      "address : 120 coulter ave suite 3\n",
+      "city : ardmore\n",
+      "state : PA\n",
+      "postal_code : 19003\n",
+      "\n",
+      "1/10 positive, 0/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : quick lube plus\n",
+      "address : 6014 e hillsborough ave ste c\n",
+      "city : tampa\n",
+      "state : FL\n",
+      "postal_code : 33610\n",
+      "\n",
+      "name : quick lube plus tires inc\n",
+      "address : 6014 e hillsborough ave ste c\n",
+      "city : tampa\n",
+      "state : FL\n",
+      "postal_code : 33610\n",
+      "\n",
+      "2/10 positive, 0/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : elegance perfumes\n",
+      "address : 433 opry mills dr\n",
+      "city : nashville\n",
+      "state : TN\n",
+      "postal_code : 37214\n",
+      "\n",
+      "name : elegance perfume tn incorporated\n",
+      "address : 433 opry mills dr 330\n",
+      "city : nashville\n",
+      "state : TN\n",
+      "postal_code : 37214\n",
+      "\n",
+      "3/10 positive, 0/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : wilsons hardware and locksmith\n",
+      "address : 217 w main st\n",
+      "city : lansdale\n",
+      "state : PA\n",
+      "postal_code : 19446\n",
+      "\n",
+      "name : wilsons hardware and locksmiths\n",
+      "address : 217 west main st\n",
+      "city : lansdale\n",
+      "state : PA\n",
+      "postal_code : 19446\n",
+      "\n",
+      "4/10 positive, 0/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : nada\n",
+      "address : 202 21st ave s\n",
+      "city : nashville\n",
+      "state : TN\n",
+      "postal_code : 37203\n",
+      "\n",
+      "name : nashville aquatic club inc\n",
+      "address : 222 25th ave n c o nashville aqu clb\n",
+      "city : nashville\n",
+      "state : TN\n",
+      "postal_code : 37203\n",
+      "\n",
+      "5/10 positive, 0/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : loop\n",
+      "address : 1914 south st\n",
+      "city : philadelphia\n",
+      "state : PA\n",
+      "postal_code : 19146\n",
+      "\n",
+      "name : food shelter\n",
+      "address : 1904 south st\n",
+      "city : philadelphia\n",
+      "state : PA\n",
+      "postal_code : 19146\n",
+      "\n",
+      "5/10 positive, 1/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : gavel\n",
+      "address : 902 virginia ave ste 102\n",
+      "city : indianapolis\n",
+      "state : IN\n",
+      "postal_code : 46203\n",
+      "\n",
+      "name : tappers arcade bar llc\n",
+      "address : 501 virginia ave ste 102\n",
+      "city : indianapolis\n",
+      "state : IN\n",
+      "postal_code : 46203\n",
+      "\n",
+      "5/10 positive, 2/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : home team plumbing\n",
+      "address : 5633 70th ave n\n",
+      "city : pinellas park\n",
+      "state : FL\n",
+      "postal_code : 33781\n",
+      "\n",
+      "name : home team plumbing inc\n",
+      "address : 3015 46th ave n ste b\n",
+      "city : saint petersburg\n",
+      "state : FL\n",
+      "postal_code : 33714\n",
+      "\n",
+      "5/10 positive, 3/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : c  f tire co inc\n",
+      "address : 1549 columbia ave\n",
+      "city : franklin\n",
+      "state : TN\n",
+      "postal_code : 37064\n",
+      "\n",
+      "name : c  f tire  service llc dba none\n",
+      "address : 1549 columbia ave\n",
+      "city : franklin\n",
+      "state : TN\n",
+      "postal_code : 37064\n",
+      "\n",
+      "5/10 positive, 4/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : tops\n",
+      "address : 259 s 15th st\n",
+      "city : philadelphia\n",
+      "state : PA\n",
+      "postal_code : 19102\n",
+      "\n",
+      "name : mcglincheys bar and grill inc\n",
+      "address : 259 s 15th st\n",
+      "city : philadelphia\n",
+      "state : PA\n",
+      "postal_code : 19102\n",
+      "\n",
+      "6/10 positive, 4/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : ichiban japanese restaurant and sushi bar\n",
+      "address : 8265 us 31\n",
+      "city : indianapolis\n",
+      "state : IN\n",
+      "postal_code : 46227\n",
+      "\n",
+      "name : ichiban indiana inc\n",
+      "address : 8265 us 31 s\n",
+      "city : indianapolis\n",
+      "state : IN\n",
+      "postal_code : 46227\n",
+      "\n",
+      "6/10 positive, 4/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : the marott\n",
+      "address : 2625 n meridian st\n",
+      "city : indianapolis\n",
+      "state : IN\n",
+      "postal_code : 46208\n",
+      "\n",
+      "name : glasshouse vistation  nurturing center llc\n",
+      "address : 2625 n meridian st ste 45\n",
+      "city : indianapolis\n",
+      "state : IN\n",
+      "postal_code : 46208\n",
+      "\n",
+      "6/10 positive, 4/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : maxines chicken  waffles  city market\n",
+      "address : 222 e market st\n",
+      "city : indianapolis\n",
+      "state : IN\n",
+      "postal_code : 46204\n",
+      "\n",
+      "name : gm foods inc\n",
+      "address : 222 e market st\n",
+      "city : indianapolis\n",
+      "state : IN\n",
+      "postal_code : 46204\n",
+      "\n",
+      "6/10 positive, 5/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : saxbys  ardmore\n",
+      "address : 120 coulter ave\n",
+      "city : ardmore\n",
+      "state : PA\n",
+      "postal_code : 19003\n",
+      "\n",
+      "name : the ultimate bake shoppe of ardmore llc\n",
+      "address : 120 coulter ave suite 3\n",
+      "city : ardmore\n",
+      "state : PA\n",
+      "postal_code : 19003\n",
+      "\n",
+      "6/10 positive, 5/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : rock hill dentistry\n",
+      "address : 9601 manchester rd\n",
+      "city : st louis\n",
+      "state : MO\n",
+      "postal_code : 63119\n",
+      "\n",
+      "name : alex sharifian dds rock hill dentistry pc\n",
+      "address : 9601 manchester road\n",
+      "city : st louis\n",
+      "state : MO\n",
+      "postal_code : 63119\n",
+      "\n",
+      "6/10 positive, 6/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : americas best contacts  eyeglasses\n",
+      "address : 1315 walnut st\n",
+      "city : philadelphia\n",
+      "state : PA\n",
+      "postal_code : 19107\n",
+      "\n",
+      "name : project 440\n",
+      "address : 1315 walnut st ste 320\n",
+      "city : philadelphia\n",
+      "state : PA\n",
+      "postal_code : 19107\n",
+      "\n",
+      "7/10 positive, 6/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : siam lotus\n",
+      "address : 931 spring garden street\n",
+      "city : philadelphia\n",
+      "state : PA\n",
+      "postal_code : 19123\n",
+      "\n",
+      "name : 931 spring inc win win coffee bar\n",
+      "address : 931 spring garden st\n",
+      "city : philadelphia\n",
+      "state : PA\n",
+      "postal_code : 19123\n",
+      "\n",
+      "7/10 positive, 7/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : alpha tech electronics\n",
+      "address : 1901 gravois ave\n",
+      "city : saint louis\n",
+      "state : MO\n",
+      "postal_code : 63104\n",
+      "\n",
+      "name : zaw win\n",
+      "address : 1901 gravois ave\n",
+      "city : saint louis\n",
+      "state : MO\n",
+      "postal_code : 63104\n",
+      "\n",
+      "7/10 positive, 8/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : coeur\n",
+      "address : 132 s 17th st\n",
+      "city : philadelphia\n",
+      "state : PA\n",
+      "postal_code : 19103\n",
+      "\n",
+      "name : vidal sports llc\n",
+      "address : 132 s 17th st fl 4\n",
+      "city : philadelphia\n",
+      "state : PA\n",
+      "postal_code : 19103\n",
+      "\n",
+      "7/10 positive, 9/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "name : chameleon\n",
+      "address : 27 state rd\n",
+      "city : media\n",
+      "state : PA\n",
+      "postal_code : 19063\n",
+      "\n",
+      "name : natalie rose beauty llc\n",
+      "address : 27 state rd\n",
+      "city : media\n",
+      "state : PA\n",
+      "postal_code : 19063\n",
+      "\n",
+      "7/10 positive, 10/10 negative\n",
+      "Do these records refer to the same thing?\n",
+      "(y)es / (n)o / (u)nsure / (f)inished / (p)revious\n",
+      "Finished labeling\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>left_dataset</th>\n",
+       "      <th>right_dataset</th>\n",
+       "      <th>confidence_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17919</td>\n",
+       "      <td>74720</td>\n",
+       "      <td>0.975422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>64766</td>\n",
+       "      <td>753</td>\n",
+       "      <td>0.975422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>49662</td>\n",
+       "      <td>10025</td>\n",
+       "      <td>0.975422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>77310</td>\n",
+       "      <td>73888</td>\n",
+       "      <td>0.975422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>25853</td>\n",
+       "      <td>20450</td>\n",
+       "      <td>0.975422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5251</th>\n",
+       "      <td>72760</td>\n",
+       "      <td>37980</td>\n",
+       "      <td>0.800886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5252</th>\n",
+       "      <td>9831</td>\n",
+       "      <td>3532</td>\n",
+       "      <td>0.800503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5253</th>\n",
+       "      <td>50011</td>\n",
+       "      <td>58100</td>\n",
+       "      <td>0.800399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5254</th>\n",
+       "      <td>42587</td>\n",
+       "      <td>67573</td>\n",
+       "      <td>0.800152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5255</th>\n",
+       "      <td>93579</td>\n",
+       "      <td>62548</td>\n",
+       "      <td>0.800078</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5256 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      left_dataset  right_dataset  confidence_score\n",
+       "0            17919          74720          0.975422\n",
+       "1            64766            753          0.975422\n",
+       "2            49662          10025          0.975422\n",
+       "3            77310          73888          0.975422\n",
+       "4            25853          20450          0.975422\n",
+       "...            ...            ...               ...\n",
+       "5251         72760          37980          0.800886\n",
+       "5252          9831           3532          0.800503\n",
+       "5253         50011          58100          0.800399\n",
+       "5254         42587          67573          0.800152\n",
+       "5255         93579          62548          0.800078\n",
+       "\n",
+       "[5256 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dedupe_pipeline(left_df, right_df, filepath = './data/dedupe_submission.csv')"
+   ]
   }
  ],
  "metadata": {
@@ -680,7 +1159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
